--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Joe Bradshaw",
   "license": "MIT",
   "dependencies": {
+    "angular": "^1.6.1",
     "body-parser": "^1.15.2",
     "cors": "^2.8.1",
     "express": "^4.14.0",
